2010-07-19  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs:
	* XamlLoaderCallbacks.cs: Abstract out a little more of the
	XamlLoader interface so I can easily add the SL4XamlLoader.

2010-07-12  Jackson Harper  <jackson@ximian.com>

	* managedxamlloader.cs:
	* xamlLoaderCallbacks.cs: Add a gchandle to the callbacks.
	- Obviously the loader can't free its own gchandle.

2010-07-12  Jackson Harper  <jackson@ximian.com>

	* managedxamlloader.cs:
	* xamlLoaderCallbacks.cs: create_gchandle returns the handle
	now. This way template contexts can create a new handle, hold on
	to it, and free it when needed.

2010-07-09  Jackson Harper  <jackson@ximian.com>

	* XamlLoaderCallbacks.cs: Remove unused property.  This guy was
	left over from the SL 1.1 days.

2010-07-09  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs: When parsing static resources we don't
	  actually care if target_parent_ptr is null or not. We don't
	  use it. Fixes parts of drt 350.

2010-07-07  Jackson Harper  <jackson@ximian.com>

	* XamlContext.cs: Add some properties for tempalate binding. Also
	add a default constructor.  The XamlParser will always have a
	XamlContext now by default, it will just be empty.

	* XamlPropertySetter.cs: Support setting
	TemplateBindingExpressions, also scope out the temp binding vars
	so we dont pollute local.

2010-07-02  Jackson Harper  <jackson@ximian.com>

	* XamlPropertySetter.cs: Fix typo, add in the Binding setter code.

2010-07-02  Jackson Harper  <jackson@ximian.com>

	* XamlPropertySetter.cs: Add the ability to lookup the
	DependencyProperty that corresponds to a property setter.

2010-06-24  Jackson Harper  <jackson@ximian.com>

	* XamlContext.cs: New class, used with parsing templates.

2010-06-24  Jackson Harper  <jackson@ximian.com>

	* XamlLoaderCallbacks.cs: Add the template parsing callback.

2010-06-23  Jackson Harper  <jackson@ximian.com>

	* MarkupExpressionParser.cs: Split this up a little bit so it can